# RecipeIQ

./: .dockerignore  .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml
Docs/: analysis_report.md
mlartifacts/0/models/m-461532bcd077424fbd145c54b5b8a7ce/artifacts/: MLmodel
mlartifacts/0/models/m-a6d7ad7bd3924fb1961eebab10d02630/artifacts/: MLmodel
mlartifacts/0/models/m-f075adfcb4b5476584b29d92b62fd793/artifacts/: MLmodel  conda.yaml
mlartifacts/0/models/m-ff6a375c897846a4b1a35f6eccad1553/artifacts/: MLmodel  conda.yaml
models/: clustering_kmeans.joblib  rating_predictor.joblib  sentiment_classifier.joblib
notebooks/: 00_data_exploration.ipynb  01_sql_analysis.ipynb  02_visualizations.ipynb  03_rating_model.ipynb  04_recommender.ipynb  05_clustering.ipynb
src/ai/: chatbot.py  embeddings.py  rag.py  sentiment.py
src/api/: main.py
src/dashboard/: app.py
src/models/: clustering.py  features.py  recommender.py
src/pipeline/: clean.py  ingest.py  load.py  transform.py
