[project]
name = "recipeiq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "chromadb>=1.5.5",
    "duckdb>=1.5.0",
    "fastapi>=0.135.1",
    "google-genai>=1.68.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "mlflow>=3.10.1",
    "nltk>=3.9.3",
    "numpy>=2.2.0",
    "pandas>=2.0",
    "plotly>=6.6.0",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.40",
    "uvicorn>=0.42.0",
    "xgboost>=3.2.0",
]
